test/semantics/programs/invalid/invalid-dictionary-operation2.guav
# Shouldn't pass since dictionaries cannot be combined

oneToSeven = {one: 1, two: 2}
oneToSeven += {three: 3, four: 4}
